--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,5 +12,8 @@
     <a mat-icon-button routerLink="/tracking" routerLinkActive="active">
       <mat-icon>calendar_today</mat-icon>
     </a>
+    <a mat-icon-button routerLink="/help" routerLinkActive="active">
+      <mat-icon>help</mat-icon>
+    </a>
   </div>
 </div>
