--- a/src/app/tracking/tracking.component.html
+++ b/src/app/tracking/tracking.component.html
@@ -9,14 +9,14 @@
     <td mat-cell *matCellDef="let element"> {{element.startTime | date: 'mediumTime'}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="endTime">
-    <th mat-header-cell *matHeaderCellDef> End Time </th>
-    <td mat-cell *matCellDef="let element"> {{element.endTime | date: 'mediumTime'}} </td>
-  </ng-container>
-
   <ng-container matColumnDef="duration">
     <th mat-header-cell *matHeaderCellDef> Duration </th>
     <td mat-cell *matCellDef="let element"> {{element.duration}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="timeSince">
+    <th mat-header-cell *matHeaderCellDef> Time Since </th>
+    <td mat-cell *matCellDef="let element"> {{element.timeSince}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
