--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
       <mat-icon>calendar_today</mat-icon>
     </a>
     <a mat-icon-button routerLink="/help" routerLinkActive="active">
-      <mat-icon>help</mat-icon>
+      <mat-icon>help_outline</mat-icon>
     </a>
   </div>
 </div>
