--- a/src/app/tracking/tracking.component.html
+++ b/src/app/tracking/tracking.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="$contractionHistory.contractions">
+<table *ngIf="$contractionHistory.contractions.length" mat-table [dataSource]="$contractionHistory.contractions">
   <ng-container matColumnDef="index">
     <th mat-header-cell *matHeaderCellDef> No. </th>
     <td mat-cell *matCellDef="let element"> {{element.index}} </td>
@@ -19,6 +19,18 @@
     <td mat-cell *matCellDef="let element"> {{element.timeSince}} </td>
   </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
+<button
+  *ngIf="$contractionHistory.contractions.length"
+  mat-button
+  color="warn"
+  on-click="$contractionHistory.clearLocalStorage()"
+>Clear History</button>
+
+<!-- No Contractions Recorded Yet -->
+<div *ngIf="$contractionHistory.contractions.length == 0">
+  No contractions recorded yet! Navigate to the timer to start keeping track!
+</div>
