--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,9 @@
 <div class="container">
-  <div class="amiinlabor">
-    <p>Am I in Labor?</p>
-  </div>
+  <labor-progress></labor-progress>
   <div class="area">
     <router-outlet></router-outlet>
   </div>
-  <div class="nav">
+  <div [class]="navClasses">
     <a mat-icon-button routerLink="/timer" routerLinkActive="active">
       <mat-icon>timer</mat-icon>
     </a>
@@ -14,6 +12,9 @@
     </a>
     <a mat-icon-button routerLink="/help" routerLinkActive="active">
       <mat-icon>help_outline</mat-icon>
+    </a>
+    <a mat-icon-button routerLink="/baby" routerLinkActive="active">
+      <mat-icon>child_friendly</mat-icon>
     </a>
   </div>
 </div>
