--- a/src/app/labor-progress/labor-progress.component.html
+++ b/src/app/labor-progress/labor-progress.component.html
@@ -1,4 +1,6 @@
 <mat-progress-bar mode="determinate" [value]="$contractionHistory.laborProgress$ | async"></mat-progress-bar>
-<p>Last contraction duration: {{lastContraction?.duration}}</p>
-<p>Time since last contraction: {{lastContraction?.timeSince}}</p>
-<p>{{progressText}}</p>
+<div *ngIf="lastContraction">
+  <p>Last contraction duration: {{lastContraction.duration}}</p>
+  <p>Time since last contraction: {{lastContraction.timeSince}}</p>
+  <p>{{progressText}}</p>
+</div>
